charts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-pipeline
  labels:
    name: log-pipeline
    monitoring: enabled
